GPC/tests/examples/fail/wrongArgCount.gpc


int fun() {
    return 1;
}

void wrongArgCount() {
    fun(23);
}
